# IT-project

./: .gitignore  README.md  pyproject.toml  requirements.md  requirements.txt  team.md
KniggaPoisk/: account_info.py  account_login.py  main.py  my_database.db  search_by_name_films.py
KniggaPoisk/database/: account_login.db
Parser_IMDB/: ParserIMDB_1_part.py  ParserIMDB_2_part.py  ParserIMDB_3_part.py
Parser_IMDB/data/parser_films_IMDb/: Check_films.py  ParserIMDB_1_part.py  ParserIMDB_2_part.py  ParserIMDB_3_part.py  films_info.db  movie_URL_IMDb.json
Parser_mybook/: main.py  movie_URL_IMDb.json  parser_url.py
application/: manage.py
application/ITPROEKTEND/: asgi.py  settings.py  urls.py  wsgi.py
application/chat/: utils.py  views.py
application/contact/: forms.py  models.py
application/contact/migrations/: 0001_initial.py
application/movies/: admin.py
application/movies/migrations/: 0001_initial.py  0002_alter_rating_movie.py  0003_actor_description_en_actor_description_ru_and_more.py
application/static/css/: style.css
application/templates/: base.html
application/templates/Gigachat/: chat.html
backend/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
django/: db.sqlite3
django/ITproject/: settings.py  urls.py
django/movies/: urls.py  views.py
frontend/: app.vue  models.d.ts  nuxt.config.ts  package.json
frontend/components/: Card.vue
frontend/pages/: books.vue  films.vue  index.vue  recommendations.vue
parsing_related/: parse_film_images.py
src/KniggaPoisk/: account_info.py  search_by_name_films.py
(+10 files in other folders)
